get entry by user id, started home page

--- a/client/index/index.html
+++ b/client/index/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <div class="navbar">
-        <p>HOME</p>
-        <p>SIGN UP</p>
-        <p>LOG IN</p>
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">SIGN UP</a></li>
+            <li><a href="#">LOG IN</a></li>
+        </ul>
+
     </div>
 
     <div class="user">
